2014-08-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_info_keys): Add ESC x key
	sequence for execute-command.

2014-08-21  Karl Berry  <karl@gnu.org>

	* Texinfo/Convert/Plaintext.pm (converter_initialize): propagate
	FILLCOLUMN.  Report from Mahlon Smith.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_menu_item): Check for case when there are no
	menu entries in the node.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Searching Commands): Consistent formatting
	for commands without key bindings.  Mention alternative for searching
	backwards.  Remove reference to Emacs regular expressions, as those
	are slightly different.  Mention what happens if you don't give a
	string for 'i'.  Mention 'highlight-searches' variable.
	(Variables): Add 'highlight-searches'.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_next, info_search_previous): Call
	info_search_internal directly instead of via info_search_1.
	<search-skip-screen=On>: Scroll up or down by a whole number of
	screen-fulls to make match visible.  This makes traversing matches
	with "}" and "{" less disorienting.

	* info/session.c (info_search_1): Argument 'start' removed.
	(DFL_START): Deleted.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_in_node_internal): Don't call
	window_adjust_pagetop.
	(info_search_1, incremental_search): Call it here instead.

2014-08-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (do_info_index_search, info_virtual_index): Remove
	check against min_search_length.
	* info/session.c (info_search_1): Don't allocate for search_string
	here.
	(info_search_next, info_search_previous): Check if search_string is
	null.

2014-08-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_virtual_index): Place index marker tag in
	generated node.
